force-app/main/default/objects/Quickbook_Service_Line__c/Quickbook_Service_Line__c.object-meta.xml
<CustomObject>
    <label>Quickbook Service Line</label>
    <nameField>
        <label>Service Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quickbook Service Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>