force-app/main/default/objects/Quickbook_Service_Line__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Service Line Contracts</relationshipLabel>
    <relationshipName>Service_Line_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>