force-app/main/default/objects/Quickbook_Service_Line__c/fields/Quickbook_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Quickbook_Invoice__c</fullName>
    <label>Quickbook Invoice</label>
    <referenceTo>Quickbook_Invoice__c</referenceTo>
    <relationshipLabel>Quickbook Invoices</relationshipLabel>
    <relationshipName>Quickbook_Invoices1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>