force-app/main/default/objects/Quickbook_Service_Line__c/fields/Quickbook_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbook_Invoice_Id__c</fullName>
    <externalId>true</externalId>
    <label>Quickbook Invoice Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>