force-app/main/default/objects/Quickbook_Service_Line__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resource</relationshipName>
    <type>Lookup</type>
</CustomField>